--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-handlebars": "^5.2.1",
     "express-session": "^1.16.1",
     "handlebars": "^4.7.7",
+    "heroku": "^7.49.1",
     "mysql2": "^1.6.5",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
